# Yolov11_bdd100k_onnx_inference

./: CMakeLists.txt  build.sh
include/: YOLO11-OBB.hpp
model/: model_export.py  yolov11_train_BDD100K_dataset.ipynb
src/: camera_inference.cpp  image_inference.cpp  video_inference.cpp
